Fixed broken carousel on mobile

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -541,7 +541,6 @@ section.container { background-color: #fff; }
 
     /* centra correttamente l'immagine ed elimina spazio sotto */
     #carouselExampleControlsNoTouching .carousel-item {
-        display: flex;
         align-items: center;
     }
 
